--- a/styles/common.css
+++ b/styles/common.css
@@ -1,25 +1,17 @@
 /* main, footer */
-html,body {}
-#wrap {
-    width:100%;
-    max-width:1920px;
-    margin:0 auto;
-    
-}
 #wrap header {
     display:flex;
     justify-content:space-between;
     align-items:center;
-    padding:15px 105px 0;
     background:aqua;
+    height:75px;
+    padding:15px 90px 0;
 }
-#wrap header h1 {
-}
+#wrap header h1 {}
 #wrap header h1 a {}
 #wrap header h1 a img {}
 #wrap header nav {}
 #wrap header nav .gnb {
-    background:pink;
     display:flex;
     flex-flow:row nowrap;
     gap:50px; 
@@ -27,23 +19,35 @@ html,body {}
 #wrap header nav .gnb > li {
     
 }
-#wrap header nav .gnb > li > a {}
+#wrap header nav .gnb > li .yogurt_on {color:#888;}
+#wrap header nav .gnb > li > a {
+    font-size:1.125rem;
+}
 #wrap header nav .gnb > li .lnb_bg {
+    position:relative;
 }
 #wrap header nav .gnb > li .lnb_depth {/* 임시값... */
     position: absolute;
-    top:100%;
+    top:22px;
     left:0;
-    width:200px;
+    width:125px;
     background: #fff;
-    border:1px solid #eee;
-    box-shadow:0 4px 10px rgba(0,0,0,0.1);
-    display:none;
     z-index:100;
+    width:125px;
+    padding:14px 18px;
+    display:none;
 }
-#wrap header nav .gnb > li .lnb_depth li {}
-#wrap header nav .gnb > li .lnb_depth li > a {}
-#wrap header .right_menu {}
+#wrap header nav .gnb > li .lnb_depth li {
+    margin-bottom:15px;
+}
+#wrap header nav .gnb > li .lnb_depth li > a {
+    font-size: 0.9375rem;
+    letter-spacing:-0.02rem;
+}
+#wrap header .right_menu {
+    display:flex; 
+    gap:22px;
+}
 #wrap header .right_menu li {}
 #wrap header .right_menu li a {}
 #wrap header .right_menu li a img {}
