--- a/styles/index.css
+++ b/styles/index.css
@@ -5,18 +5,31 @@ html,body {font-family:'Pretendard', sans-serif;}
     margin:0 auto;
     
 }
-#wrap main {}
+#wrap main {background-color:#EFEFEF;}
 /* 1.광고배너 */
-#wrap main .ad_wrap {}
+#wrap main .ad_wrap {
+    width:100%;
+    height:100vh;
+    position:relative;
+    overflow:hidden;
+}
+#wrap main .ad_wrap,
+#wrap main .ad_wrap .swiper.adSwiper,
+#wrap main .ad_wrap .swiper.adSwiper .swiper-wrapper {
+    height:100vh;
+}
 #wrap main .ad_wrap .swiper {}
 #wrap main .ad_wrap .swiper.adSwiper {position:relative;}
-#wrap main .ad_wrap .swiper.adSwiper .swiper-wrapper {position:relative;}
+#wrap main .ad_wrap .swiper.adSwiper .swiper-wrapper {
+    position:relative;
+}
 #wrap main .ad_wrap .swiper.adSwiper .swiper-wrapper .swiper-slide {
     position:relative;
     width:100%;
-    height:845px;
+    height:100vh;
     background-size:cover;
     background-position:center;
+    background-repeat:no-repeat;
 }
 #wrap main .ad_wrap .swiper.adSwiper .swiper-wrapper .swiper-slide.slide1 {
     background:url(../images/hd_slide001.jpg);
@@ -26,13 +39,13 @@ html,body {font-family:'Pretendard', sans-serif;}
 }
 #wrap main .ad_wrap .swiper.adSwiper .swiper-wrapper .swiper-slide .ad_txt {
     position:absolute;
-    top:444px;
+    top:519px;
     left:0;
     display:flex; align-items:flex-start;
     gap:32px;
 }
 #wrap main .ad_wrap .swiper.adSwiper .swiper-wrapper .swiper-slide .ad_txt .ad_line {
-    width:195px; height:1px; background:#000; margin-top:5px;
+    width:195px; height:1px; background:#000; margin-top:20px;
 }
 
 #wrap main .ad_wrap .swiper.adSwiper .swiper-wrapper .swiper-slide .ad_txt .txt_area {}
@@ -46,8 +59,8 @@ html,body {font-family:'Pretendard', sans-serif;}
 }
 #wrap main .ad_wrap .swiper.adSwiper .btn_counter {
     position:absolute;
-    bottom:193px;
-    left:230px;
+    bottom:196px;
+    left:227px;
     z-index:10;
     display:flex;
     align-items:center;
@@ -55,7 +68,7 @@ html,body {font-family:'Pretendard', sans-serif;}
     color:#000;
 }
 #wrap main .ad_wrap .swiper.adSwiper .btn_counter img {
-    vertical-align: middle;
+    vertical-align:middle;
 }
 #wrap main .ad_wrap .swiper.adSwiper .btn_counter .prev_btn {}
 #wrap main .ad_wrap .swiper.adSwiper .btn_counter .prev_btn img {}
@@ -63,7 +76,9 @@ html,body {font-family:'Pretendard', sans-serif;}
     font-weight:600;
     font-size:1.125rem;
 }
-#wrap main .ad_wrap .swiper.adSwiper .btn_counter .divider {}
+#wrap main .ad_wrap .swiper.adSwiper .btn_counter .divider {
+    width:1px; height:13px; background:#000;
+}
 #wrap main .ad_wrap .swiper.adSwiper .btn_counter .total-pg {
     font-weight:300;
     font-size:1.125rem;
@@ -96,28 +111,320 @@ main .vision_wrap .vision_txt p {
     
 }
 main .vision_wrap .vision_txt span {
-    font-family:'Oooh Baby',serif;
+    font-family:'Oooh Baby',cursive;
     letter-spacing:-0.2;
     font-size:0.938rem;
     color:#9A9A9A;
 }
 /* 3.best */
-main .best_wrap {}
-main .best_wrap .best_header {}
-main .best_wrap .best_header h2 {}
-main .best_wrap .best_header a {}
-main .best_wrap .best_header a span {}
-main .best_wrap .best_header a span img {}
-main .best_wrap .best_list {}
-main .best_wrap .best_list .best_card {}
-main .best_wrap .best_list .best_card a {}
-main .best_wrap .best_list .best_card a .best_img_wrap {}
-main .best_wrap .best_list .best_card a .best_img_wrap img {}
-main .best_wrap .best_list .best_card a .best_img_wrap .best_icon {}
+main .best_wrap {
+    margin:187px auto 191px ;
+    width:1280px;
+}
+main .best_wrap .best_header {
+    display:flex;
+    justify-content:space-between;
+    align-items:end;
+    margin-bottom:29px;
+}
+main .best_wrap .best_header h2 {
+    font-family:'MaruBuri',sans-serif;
+    font-weight:600;
+    font-size:1.875rem;
+}
+main .best_wrap .best_header .more_btn {
+    display:flex;
+    align-items:center;
+    gap:6px;
+    font-size:0.875rem;
+}
+main .best_wrap .best_header .more_btn span {}
+main .best_wrap .best_header .more_btn span img {
+    height:300px;
+}
+main .best_wrap .best_list {
+    display:flex;
+    gap:27px;
+}
+main .best_wrap .best_list .best_card {
+    
+}
+main .best_wrap .best_list .best_card a {
+    display:block;
+    overflow:hidden;
+}
+main .best_wrap .best_list .best_card a .best_img_wrap {
+    position:relative;
+    overflow:hidden;
+}
+main .best_wrap .best_list .best_card a .best_img_wrap::after {
+    content:"";
+    position:absolute;
+    top:0; left:0;
+    width:100%; height:100%;
+    background:#fff;
+    opacity:0;
+    transition:opacity 0.3s;
+    z-index:2;
+}
+main .best_wrap .best_list .best_card a .best_img_wrap:hover::after {
+    opacity:0.5;
+}
+main .best_wrap .best_list .best_card a .best_img_wrap img {
+    display:block;
+}
+main .best_wrap .best_list .best_card a .best_img_wrap:hover .best_icon {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    display:flex;
+    gap:25px;
+    z-index:5;
+}
+main .best_wrap .best_list .best_card a .best_img_wrap .best_icon {
+    display:none;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    z-index:5;
+}
 main .best_wrap .best_list .best_card a .best_img_wrap .best_icon a {}
 main .best_wrap .best_list .best_card a .best_img_wrap .best_icon a img {}
-main .best_wrap .best_list .best_card a .best_txt {}
-main .best_wrap .best_list .best_card a .best_txt .product_name {}
-main .best_wrap .best_list .best_card a .best_txt .product_price {}
-main .best_wrap .best_list .best_card a .best_txt .product_price .discount {}
-main .best_wrap .best_list .best_card a .best_txt .product_price .price {}
+main .best_wrap .best_list .best_card a .best_txt {
+    margin-top:25px;
+}
+main .best_wrap .best_list .best_card a .best_txt .product_name {
+    margin-bottom:14px;
+}
+main .best_wrap .best_list .best_card a .best_txt .product_price * {
+    font-weight:600;
+    font-size:1.063rem;
+}
+main .best_wrap .best_list .best_card a .best_txt .product_price .discount {
+    color:#FF0000;
+}
+main .best_wrap .best_list .best_card a .best_txt .product_price .price {
+}
+/* 4.신제품광고배너 */
+main .newbnr_wrap {
+    background:url(../images/bnr002.jpg);
+    height:300px;
+    width:1920px;
+    position:relative;
+}
+main .newbnr_wrap a {}
+main .newbnr_wrap a .newbnr_txt {
+    position:absolute;
+    top:60px; left:311px;
+    display:flex;
+    flex-direction:column;
+    align-items:flex-start;
+}
+main .newbnr_wrap a .newbnr_txt h2 {
+    font-weight:600;
+    font-size:1.563rem;
+    line-height:1.5;
+}
+main .newbnr_wrap a .newbnr_txt h3 {
+    font-weight:600;
+    font-size:1.75rem;
+    line-height:1.5;
+}
+main .newbnr_wrap a .newbnr_txt p {
+    margin-top:11px;
+    margin-bottom:28px;
+}
+main .newbnr_wrap a .newbnr_txt span {
+    display:block;
+    background:#fff;
+    padding:8px 15px;
+    border-radius:50px;
+    font-size:0.875rem;
+    line-height:1.5;
+    margin-left:-10px;
+}
+/* 5.sale */
+main .sale_wrap {
+    display:flex;
+    justify-content:flex-start;
+    width:1281px;
+    margin:177px auto 122px;
+    position:relative;
+}
+main .sale_wrap .sale_left {
+    width:115px;
+    margin-right:92px;
+}
+main .sale_wrap .sale_left h2 {
+    font-family:'MaruBuri',sans-serif;
+    font-size:1.875rem;
+    font-weight:600;
+    margin-bottom:58px;
+}
+main .sale_wrap .sale_left .sale_select {
+    display:flex;
+    flex-direction:column;
+    gap:21px;
+}
+main .sale_wrap .sale_left .sale_select a {
+    font-size:1.25rem;
+    font-weight:400;
+    color:#000;
+    position:relative;
+    width:max-content;
+    z-index:1;
+}
+main .sale_wrap .sale_left .sale_select a:hover {
+    font-weight:600;
+    font-size:1.375rem;
+}
+main .sale_wrap .sale_left .sale_select a::after {
+    content:"";
+    position:absolute; bottom:0; left:0;
+    width:100%; height:14px;
+    background:rgba(255, 242, 197, 1);
+    z-index:-1;
+    transform:translateY(2px);
+    display:none;
+    opacity:0;
+}
+main .sale_wrap .sale_left .sale_select a:hover::after {
+    display:block;
+    opacity:1;
+}
+main .sale_wrap .swiper_wrap {
+    position:relative;
+    width:calc(100% - 115px - 92px);
+    z-index:1;
+}
+main .sale_wrap .swiper_wrap .sale_btn_wrap {
+    position:absolute;
+    top:-40px;
+    right:0;
+    display:flex;
+    gap:30px;
+    z-index:1000;
+}
+main .sale_wrap .swiper_wrap .sale_btn_wrap .sale_prev {}
+main .sale_wrap .swiper_wrap .sale_btn_wrap .sale_next {}
+main .sale_wrap .swiper_wrap .sale_btn_wrap .sale_prev,
+main .sale_wrap .swiper_wrap .sale_btn_wrap .sale_next {
+    width:10px; height:18px;
+    display:flex;
+    z-index:100;
+    gap:15px;
+}
+main .sale_wrap .swiper_wrap .sale_btn_wrap .sale_prev img {}
+main .sale_wrap .swiper_wrap .sale_btn_wrap .sale_next img {}
+main .sale_wrap .swiper.saleSwiper {
+    position:relative;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-wrapper {
+    display:flex;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide {}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card {
+    width:360px;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a {}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_img_wrap {
+    position:relative;
+    overflow:hidden;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_img_wrap img {
+    display:block;
+    width:100%;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_img_wrap::after {
+    content:"";
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#fff;
+    opacity:0;
+    z-index:2;
+    transition:0.3s;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_img_wrap:hover::after {
+    opacity:0.5;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_img_wrap .sale_icon {
+    display:none;
+    position:absolute;
+    left:50%;
+    top:50%;
+    transform:translate(-50%, -50%);
+    z-index:5;
+    gap:20px;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_img_wrap:hover .sale_icon {
+    display:flex;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_txt {
+    margin-top:25px;
+    text-align:center;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_txt .product_name {
+    margin-bottom:14px;
+    line-height:1.5;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_txt .product_price {}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_txt .product_price .discount {
+    font-size:1.063rem;
+    font-weight:600;
+    color:#f00;
+    margin-right:13px;
+}
+main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_txt .product_price .price {
+    font-size:1.063rem;
+    font-weight:600;
+}
+/* 6-1. 선물 배너 */
+main .service_wrap {
+    display:flex;
+    justify-content:space-between;
+    height:577px;
+    margin-bottom:28px;
+}
+main .service_wrap .offer_wrap {}
+main .service_wrap .offer_wrap a {}
+main .service_wrap .offer_wrap a img {}
+main .service_wrap .offer_wrap a .offer_txt {
+    margin-left:auto;
+    margin-top:28px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center; 
+    width:620px;
+}
+main .service_wrap .offer_wrap a .offer_txt .offer_left {}
+main .service_wrap .offer_wrap a .offer_txt .offer_left h2 {
+    margin-bottom:14px;
+    font-weight:500;
+    font-size:1.375rem;
+}
+main .service_wrap .offer_wrap a .offer_txt .offer_left p {
+    font-weight:300;
+    font-size:0.875rem;
+    line-height:1.7;
+}
+main .service_wrap .offer_wrap a .offer_txt .more_btn {}
+main .service_wrap .offer_wrap a .offer_txt .more_btn img {}
+/* 7.비디오 카테고리 */
+main .tab_wrap {}
+main .tab_wrap .tab_layout {}
+main .tab_wrap .tab_layout .tab_video {}
+main .tab_wrap .tab_layout .tab_video video {}
+main .tab_wrap .tab_layout .tab_area {}
+main .tab_wrap .tab_layout .tab_area .tab_menu {}
+main .tab_wrap .tab_layout .tab_area .tab_menu .tab {}
+main .tab_wrap .tab_layout .tab_area .tab_menu:hover .tab {}
+main .tab_wrap .tab_layout .tab_area .swiper {}
+main .tab_wrap .tab_layout .tab_area .swiper.tabSwiper {}
+main .tab_wrap .tab_layout .tab_area .swiper.tabSwiper .swiper-wrapper {}
+main .tab_wrap .tab_layout .tab_area .swiper.tabSwiper .swiper-wrapper .swiper-slide {}
+/* 8. 레시피 배너 */
