--- a/styles/index.css
+++ b/styles/index.css
@@ -268,7 +268,7 @@ main .sale_wrap .sale_left .sale_select {
     flex-direction:column;
     gap:21px;
 }
-main .sale_wrap .sale_left .sale_select a {
+main .sale_wrap .sale_left .sale_select button {
     font-size:1.25rem;
     font-weight:400;
     color:#000;
@@ -276,11 +276,11 @@ main .sale_wrap .sale_left .sale_select a {
     width:max-content;
     z-index:1;
 }
-main .sale_wrap .sale_left .sale_select a:hover {
+main .sale_wrap .sale_left .sale_select button:hover {
     font-weight:600;
     font-size:1.375rem;
 }
-main .sale_wrap .sale_left .sale_select a::after {
+main .sale_wrap .sale_left .sale_select button::after {
     content:"";
     position:absolute; bottom:0; left:0;
     width:100%; height:14px;
@@ -290,7 +290,7 @@ main .sale_wrap .sale_left .sale_select a::after {
     display:none;
     opacity:0;
 }
-main .sale_wrap .sale_left .sale_select a:hover::after {
+main .sale_wrap .sale_left .sale_select button:hover::after {
     display:block;
     opacity:1;
 }
@@ -383,7 +383,7 @@ main .sale_wrap .swiper.saleSwiper .swiper-slide.sale_card a .sale_txt .product_
     font-size:1.063rem;
     font-weight:600;
 }
-/* 6-1. 선물 배너 */
+/* 6. 오퍼 배너 */
 main .service_wrap {
     display:flex;
     justify-content:space-between;
@@ -394,13 +394,14 @@ main .service_wrap .offer_wrap {}
 main .service_wrap .offer_wrap a {}
 main .service_wrap .offer_wrap a img {}
 main .service_wrap .offer_wrap a .offer_txt {
-    margin-left:auto;
     margin-top:28px;
     display:flex;
     justify-content:space-between;
     align-items:center; 
     width:620px;
 }
+main .service_wrap .offer_wrap:nth-child(1) a .offer_txt {margin-left:auto;}
+main .service_wrap .offer_wrap:nth-child(2) a .offer_txt {margin-right:auto;}
 main .service_wrap .offer_wrap a .offer_txt .offer_left {}
 main .service_wrap .offer_wrap a .offer_txt .offer_left h2 {
     margin-bottom:14px;
@@ -415,16 +416,82 @@ main .service_wrap .offer_wrap a .offer_txt .offer_left p {
 main .service_wrap .offer_wrap a .offer_txt .more_btn {}
 main .service_wrap .offer_wrap a .offer_txt .more_btn img {}
 /* 7.비디오 카테고리 */
-main .tab_wrap {}
-main .tab_wrap .tab_layout {}
-main .tab_wrap .tab_layout .tab_video {}
-main .tab_wrap .tab_layout .tab_video video {}
-main .tab_wrap .tab_layout .tab_area {}
-main .tab_wrap .tab_layout .tab_area .tab_menu {}
-main .tab_wrap .tab_layout .tab_area .tab_menu .tab {}
-main .tab_wrap .tab_layout .tab_area .tab_menu:hover .tab {}
-main .tab_wrap .tab_layout .tab_area .swiper {}
-main .tab_wrap .tab_layout .tab_area .swiper.tabSwiper {}
-main .tab_wrap .tab_layout .tab_area .swiper.tabSwiper .swiper-wrapper {}
-main .tab_wrap .tab_layout .tab_area .swiper.tabSwiper .swiper-wrapper .swiper-slide {}
+main .video_wrap {
+    display:flex;
+    width:1280px;
+    margin:164px auto 136px;
+    background:skyblue;
+}
+main .video_wrap .tab_layout {
+    display:flex;
+    justify-content:space-between;
+    margin:0 auto;
+}
+main .video_wrap .tab_layout .videoLeftSwiper {
+    width:730px;
+    height:620px;
+    object-fit:cover;
+    display:block;
+}
+main .video_wrap .tab_layout .videoLeftSwiper .swiper-wrapper {
+}
+main .video_wrap .tab_layout .videoLeftSwiper .swiper-wrapper .swiper-slide {}
+main .video_wrap .tab_layout .videoLeftSwiper .swiper-wrapper .swiper-slide.tab_video {
+}
+main .video_wrap .tab_layout .videoLeftSwiper .swiper-wrapper .swiper-slide.tab_video video {
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    display:block;
+}
+main .video_wrap .tab_layout .tap_right {
+    margin-left:41px;
+    width:509px;
+}
+main .video_wrap .tab_layout .tap_right .tab_contents {}
+main .video_wrap .tab_layout .tap_right .tab_contents .tab_header {
+    display:flex;
+    justify-content:space-between;
+}
+main .video_wrap .tab_layout .tap_right .tab_contents .tab_header .tab_menu {
+    display:flex;
+}
+main .video_wrap .tab_layout .tap_right .tab_contents .tab_header .tab_menu .tab {}
+main .video_wrap .tab_layout .tap_right .tab_contents .tab_header .tab_menu .tab button {}
+main .video_wrap .tab_layout .tap_right .tab_contents .tab_header .tab_menu .tab.active {}
+main .video_wrap .tab_layout .tap_right .tab_contents .tab_header .tab_menu .tab.active button {}
+main .video_wrap .tab_layout .tap_right .tab_contents .tab_header .tab_arrow {}
+main .video_wrap .tab_layout .tap_right .tab_contents .tab_header .tab_arrow .tab_prev {}
+main .video_wrap .tab_layout .tap_right .tab_contents .tab_header .tab_arrow .tab_next {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide {display:block;}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide a {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide a .img_wrap {
+}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide a .img_wrap img {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.yogurt_card {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.shake_card {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.butter_card {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.kids_card {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide .tab_go {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide .tab_go h2 {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide .tab_go img {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide p {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.double_card {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.double_card .tab_product {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.double_card .tab_product a {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.double_card .tab_product .img_wrap {
+}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.double_card .tab_product .img_wrap img {
+}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.double_card .tab_product .tab_txt {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.double_card .tab_product .tab_txt .product_name {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.double_card .tab_product .tab_txt .product_price {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.double_card .tab_product .tab_txt .product_price .discount {}
+main .video_wrap .tab_layout .tap_right .tab_contents .videoSwiper .swiper-wrapper .swiper-slide.tab_area .tabSwiper .swiper-wrapper .swiper-slide.double_card .tab_product .tab_txt .product_price .price {}
 /* 8. 레시피 배너 */
