--- a/styles/common.css
+++ b/styles/common.css
@@ -74,13 +74,17 @@
 #wrap header .header_inner .right_menu li a {}
 #wrap header .header_inner .right_menu li a img {width:22px;}
 /* footer */
-footer {}
+footer {background:#F6F6F4;}
 footer .footer_inner {
-    text-align:center;
-    height:700px;
+    width:1920px;
+    padding:113.5px 320px;
+    margin:0 auto;
     position:relative;
-    background:#F6F6F4;
-    padding:113.5px 707px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    text-align:center;
+    box-sizing:border-box;
 }
 footer .footer_inner .footer_logo {}
 footer .footer_inner .footer_logo img {
@@ -107,9 +111,11 @@ footer .footer_inner p {
 }
 footer .footer_inner .footer_sns {
     margin-top:47px;
+    display:flex;
+    gap:25px;
 }
 footer .footer_inner .footer_sns a {
-    margin-right:25px;
+    display:inline-block;
 }
 footer .footer_inner .kcp_mark {
     position:absolute;
